na peru surya aulbum added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -96,6 +96,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" <%= link_to 'Bharath Ane Nenu', bharath_path %></a>
+              <a class="dropdown-item" <%= link_to 'Na Peru Surya Na Illu India', naperu_path %></a>
               <a class="dropdown-item" <%= link_to 'Krishnarjuna Yuddam', krish_path %></a>
               <a class="dropdown-item" <%= link_to 'Rangasthalam', ranga_path %></a>
               <a class="dropdown-item" <%= link_to 'Chal Mohan Ranga', chal_path %></a>
