--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -69,11 +69,11 @@
   </div>
   <div class="carousel-item">
     <div class="carousel-caption d-none d-md-block">
-    <h1>MLA</h1>
+    <h1>Naa Peru Surya Naa illu India</h1>
     <p>Listen All tracks</p>
-    <a class="btn btn-info" <%= link_to 'Listen Here', mla_path %></a>
+    <a class="btn btn-info" <%= link_to 'Listen Here', naperu_path %></a>
    </div>
-   <img class="d-block img-fluid" src="/assets/mla2.jpg" alt="Music Album 1">
+   <img class="d-block img-fluid" src="/assets/naperu2.jpg" alt="Music Album 1">
   </div>
   <div class="carousel-item">
     <div class="carousel-caption d-none d-md-block">
