mahanati and mehabooba lyrics added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,10 +69,12 @@
               Latest Lyrics
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" <%= link_to 'Sada', sada_path %></a>
+              <a class="dropdown-item" <%= link_to 'Mehabooba', mehabooba_path %></a>
+              <a class="dropdown-item" <%= link_to 'Yantrapu Lokapu', yenthara_path %></a>
               <a class="dropdown-item" <%= link_to 'Merise Merise', merise_path %></a>
               <a class="dropdown-item" <%= link_to 'Kothaga Kothaga', kothaga_path %></a>
               <a class="dropdown-item" <%= link_to 'Gaali Valuga',gaali_path %></a>
-              <a class="dropdown-item" <%= link_to 'Yantrapu Lokapu', yenthara_path %></a>
               <a class="dropdown-item" <%= link_to 'Rayyi Rayyi Mantu', rayyi_path %></a>
             </div>
           </li>
@@ -96,6 +98,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" <%= link_to 'Bharath Ane Nenu', bharath_path %></a>
+              <a class="dropdown-item" <%= link_to 'Mahanati', mahanati_path %></a>
               <a class="dropdown-item" <%= link_to 'Na Peru Surya Na Illu India', naperu_path %></a>
               <a class="dropdown-item" <%= link_to 'Krishnarjuna Yuddam', krish_path %></a>
               <a class="dropdown-item" <%= link_to 'Rangasthalam', ranga_path %></a>
