--- a/app/views/welcome/lyrics.html.erb
+++ b/app/views/welcome/lyrics.html.erb
@@ -30,12 +30,28 @@
         </div><br> -->
         <div class="col-sm-4">
           <div class="card">
-             <img class="card-img-top" src="/assets/yenthara.jpg" alt="Yenthara Lokapu">
+             <img class="card-img-top" src="/assets/mehabooba.jpg" alt="mehabooba">
             <div class="card-body">
-            <a class="btn btn-danger" <%= link_to 'Yenthara', yenthara_path %></a>
+            <a class="btn btn-danger" <%= link_to 'Mehabooba', mehabooba_path %></a>
             </div>
             </div>
           </div>
+          <div class="col-sm-4">
+            <div class="card">
+               <img class="card-img-top" src="/assets/sada.jpg" alt="sada">
+              <div class="card-body">
+              <a class="btn btn-danger" <%= link_to 'Sada', sada_path %></a>
+              </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card">
+                 <img class="card-img-top" src="/assets/yenthara.jpg" alt="Yenthara Lokapu">
+                <div class="card-body">
+                <a class="btn btn-danger" <%= link_to 'Yenthara', yenthara_path %></a>
+                </div>
+                </div>
+              </div>
         <div class="col-sm-4">
           <div class="card">
              <img class="card-img-top" src="/assets/nekalla.jpg" alt="Ne kallalona">
