albums added, video songs updated

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,6 +97,9 @@
               Albums
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" <%= link_to 'Geetha Govindam', geetha_path %></a>
+              <a class="dropdown-item" <%= link_to 'Rx 100', rx100_path %></a>
+              <a class="dropdown-item" <%= link_to 'Shailaja Reddy Alludu', sailaja_path %></a>
               <a class="dropdown-item" <%= link_to 'Bharath Ane Nenu', bharath_path %></a>
               <a class="dropdown-item" <%= link_to 'Mahanati', mahanati_path %></a>
               <a class="dropdown-item" <%= link_to 'Na Peru Surya Na Illu India', naperu_path %></a>
