--- a/app/views/welcome/video_songs.html.erb
+++ b/app/views/welcome/video_songs.html.erb
@@ -13,11 +13,44 @@
   </div>
   <img class="song_images" src="/assets/top10.jpg" width:"100" height:"100";>
 
-      <div class="row mb-3">
-         <div class="col-sm-4">Bharath Ane Nenu</div>
+  <div class="row mb-3">
+   <div class="col-sm-4">Egireney Manasu</div>
+    <div class="col-md-8">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe width="600" height="338" src="https://www.youtube.com/embed/pII6-QC_3QM?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div><br>
+  <div class="row mb-3">
+   <div class="col-sm-4">Manasuna Patti</div>
+    <div class="col-md-8">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe width="600" height="338" src="https://www.youtube.com/embed/O9-ZzkXz1XA?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div><br>
+  <div class="row mb-3">
+   <div class="col-sm-4">Mahanati</div>
+    <div class="col-md-8">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe width="600" height="338" src="https://www.youtube.com/embed/ijUiM775KRI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div><br>
+  <div class="row mb-3">
+   <div class="col-sm-4">I Wann Fly</div>
+    <div class="col-md-8">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe width="600" height="338" src="https://www.youtube.com/embed/A56mZxSXKn8?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+  <br>
+        <div class="row mb-3">
+         <div class="col-sm-4">Idi Kalala</div>
           <div class="col-md-8">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="600" height="338" src="https://www.youtube.com/embed/2wGSKHW2PvI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="600" height="338" src="https://www.youtube.com/embed/F_LGJSeehFA?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -27,17 +60,17 @@
      <div class="col-sm-4"> Lover Also Fighter Also</div>
       <div class="col-md-8">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe width="600" height="338" src="https://www.youtube.com/embed/ApLzE-TLBYU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="600" height="338" src="https://www.youtube.com/embed/wui6D5J38MM?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           <hr>
         </div>
         </div>
       </div>
       <br>
       <div class="row mb-3">
-     <div class="col-sm-4">Dhari Chudu</div>
+     <div class="col-sm-4">Ga Ga Megha</div>
       <div class="col-md-8">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe width="600" height="338" src="https://www.youtube.com/embed/neuBFUOnBJ0?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="600" height="338" src="https://www.youtube.com/embed/4gDYt1XPkkE?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -52,10 +85,10 @@
     </div>
     <br>
     <div class="row mb-3">
-     <div class="col-sm-4"> Ninnala</div>
+     <div class="col-sm-4"> Vinna ne</div>
       <div class="col-md-8">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe width="600" height="338" src="https://www.youtube.com/embed/bcL53pgFzSc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="600" height="338" src="https://www.youtube.com/embed/J2whskXsZe8?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -69,16 +102,8 @@
       </div>
     </div>
     <br>
-    <div class="row mb-3">
-     <div class="col-sm-4">Most Wanted Abbayi</div>
-      <div class="col-md-8">
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe width="600" height="338" src="https://www.youtube.com/embed/-EwRDhv0YvA?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-    <br>
-    <div class="row mb-3">
+
+    <!-- <div class="row mb-3">
      <div class="col-sm-4">Ga Gha Megha</div>
       <div class="col-md-8">
         <div class="embed-responsive embed-responsive-16by9">
@@ -103,7 +128,7 @@
           <iframe width="600" height="338" src="https://www.youtube.com/embed/cww7DLVYdx0?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
-    </div>
+    </div> -->
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   </body>
