--- a/app/assets/stylesheets/browser.css
+++ b/app/assets/stylesheets/browser.css
@@ -80,7 +80,7 @@ body:not(:-moz-handler-blocked) #cuarenta { color: red; }
 #veinte { color/*\**/: blue\9; }
 
 /* IE6, IE7 -- acts as an !important */
-#veintesiete { color: blue !ie; } /* string after ! can be anything */
+#veintesiete { color: blue \9; } /* string after ! can be anything */
 
 /* IE8, IE9 */
 #anotherone  {color: blue\0/;} /* must go at the END of all rules */
