--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -23,13 +23,13 @@
       <li data-target="#slider" data-slide-to="6"></li>
       <li data-target="#slider" data-slide-to="7"></li>
       <li data-target="#slider" data-slide-to="8"></li>
+      <li data-target="#slider" data-slide-to="9"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
         <div class="carousel-caption d-none d-md-block">
         <h1>Geetha Govindam</h1>
         <p>Listen All tracks</p>
-        <br><br><br><br><br><br>
         <a class="btn btn-info" <%= link_to 'Listen Here', geetha_path %></a>
        </div>
        <img class="d-block img-fluid" src="/assets/geetha.jpg" alt="Music Album 0">
@@ -44,11 +44,27 @@
       </div>
       <div class="carousel-item">
         <div class="carousel-caption d-none d-md-block">
+        <h1>Srinivasa Kalyanam</h1>
+        <p>Listen All tracks</p>
+        <a class="btn btn-info" <%= link_to 'Listen Here', srinivasa_path %></a>
+       </div>
+       <img class="d-block img-fluid" src="/assets/srinivasa.jpg" style="max-width:100%"; alt="Music Album 1">
+      </div>
+      <div class="carousel-item">
+        <div class="carousel-caption d-none d-md-block">
         <h1>RX 100</h1>
         <p>Listen All tracks</p>
         <a class="btn btn-info" <%= link_to 'Listen Here', rx100_path %></a>
        </div>
        <img class="d-block img-fluid" src="/assets/rx100.jpg" style="max-width:100%"; alt="Music Album 1">
+      </div>
+      <div class="carousel-item">
+        <div class="carousel-caption d-none d-md-block">
+        <h1>Mahanati</h1>
+        <p>Listen All tracks</p>
+        <a class="btn btn-info" <%= link_to 'Listen Here', mahanati_path %></a>
+       </div>
+       <img class="d-block img-fluid" src="/assets/mahanati.jpg" style="max-width:100%"; alt="Music Album 1">
       </div>
       <div class="carousel-item">
         <div class="carousel-caption d-none d-md-block">
