--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -20,6 +20,9 @@
       <link href="assets/application-bold.css" rel="stylesheet">
       <link href="assets/home.css" rel="stylesheet">
       <link href="assets/main.css" rel="stylesheet">
+      <link href="assets/heading.css" rel="stylesheet">
+      <link href="assets/media.css" rel="stylesheet">
+      <link href="assets/browser.css" rel="stylesheet">
       <link rel="icon" type="image/png" href="/assets/music_icon.ico">
 
     <style>
