--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -139,7 +139,7 @@
           </div>
         </div>
       </div>
-    </br></br></br></br></br></br></br>
+    </br></br></br></br></br>
     <div id="fm" class="container">
     <div class="row">
     <div class="col">
@@ -158,14 +158,14 @@
     <h2><span class="badge badge-success">FM Station 4: TG 9</span></h2>
     <audio controls src="http://s6.voscast.com:10596/;"></audio><br></br>
     </div>
-  <!-- <div class="col">
+  <div class="col">
   <h2><span class="badge badge-success">FM Station 5: Manasutho Telugu FM</span></h2>
   <audio controls src="http://85.25.95.17:8008/;stream/1;"></audio><br></br>
   </div>
   <div class="col">
     <h2><span class="badge badge-success">FM Station 6: Geetam Telugu FM</span></h2>
     <audio controls src="http://149.56.175.167:5700/stream;"></audio><br></br>
-  </div> -->
+  </div>
   </div>
   </div>
     </div>
