--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="">
+
+    <link href="assets/heading.css" rel="stylesheet">
+    <link href="assets/media.css" rel="stylesheet">
+    <link href="assets/browser.css" rel="stylesheet">
+
     <style>
     body{
       overflow-y: hidden;
@@ -139,7 +151,7 @@
           </div>
         </div>
       </div>
-    </br></br></br></br></br>
+    <br><br><br><br><br><br><br>
     <div id="fm" class="container">
     <div class="row">
     <div class="col">
@@ -490,6 +502,7 @@
     </div>
   </div>
 </div>
+</div>
 <script type="text/javascript">
 document.getElementById('choose').onclick=function(){
   var choosed="";
@@ -505,5 +518,6 @@ document.getElementById('submit-button').onclick=function(){
 }
 </script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-</body>
+<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+  </body>
 </html>
