--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,18 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
-
-    <link href="assets/heading.css" rel="stylesheet">
-    <link href="assets/media.css" rel="stylesheet">
-    <link href="assets/browser.css" rel="stylesheet">
-
     <style>
     body{
       overflow-y: hidden;
@@ -151,7 +139,7 @@
           </div>
         </div>
       </div>
-    <br><br><br><br><br><br><br>
+      </br></br></br></br></br></br></br></br>
     <div id="fm" class="container">
     <div class="row">
     <div class="col">
@@ -162,6 +150,7 @@
       <h2><span class="badge badge-success">FM Station 2: Hungama</span></h2>
       <audio controls src="http://103.16.47.70:9444/;"></audio><br></br>
     </div>
+    <div class="w-100"></div>
     <div class="col">
     <h2><span class="badge badge-success">FM Station 3: Telugu One</span></h2>
     <audio controls src="http://173.203.133.187:9700/;"></audio><br></br>
@@ -170,14 +159,14 @@
     <h2><span class="badge badge-success">FM Station 4: TG 9</span></h2>
     <audio controls src="http://s6.voscast.com:10596/;"></audio><br></br>
     </div>
-  <!-- <div class="col">
+  <div class="col">
   <h2><span class="badge badge-success">FM Station 5: Manasutho Telugu FM</span></h2>
   <audio controls src="http://85.25.95.17:8008/;stream/1;"></audio><br></br>
   </div>
   <div class="col">
-    <h2><span class="badge badge-success">FM Station 6: Geetam Telugu FM</span></h2>
-    <audio controls src="http://149.56.175.167:5700/stream;"></audio><br></br>
-  </div> -->
+    <h2><span class="badge badge-success">FM Station 6: Telangana Radio</span></h2>
+    <audio controls src="http://198.178.123.17:10596/;"></audio><br></br>
+  </div>
   </div>
   </div>
     </div>
@@ -502,7 +491,6 @@
     </div>
   </div>
 </div>
-</div>
 <script type="text/javascript">
 document.getElementById('choose').onclick=function(){
   var choosed="";
@@ -518,6 +506,5 @@ document.getElementById('submit-button').onclick=function(){
 }
 </script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
-  </body>
+</body>
 </html>
