--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -23,9 +23,9 @@ margin-right: 5px;
 margin-left: 200px;
   padding-left: 250px;
 } */
-#fm{
-  margin-left: 150px;
-}
+/* #fm{
+  margin-left: 250px;
+} */
 .carousel-inner{
 width: 480px;
 height: 240px;
