--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-      
+
     <div class="row justify-content-md-center">
      <div class="block-xs-middle">
       <div class="container">
@@ -21,13 +21,13 @@
 
 
   <div class="field">
-    <%= f.label :lname %><b />
-    <%= f.text_field :lname, autofocus: true, placeholder:"Last Name", class:"h4 text-ribbon-input text-ribbon-primary" %>
+    <%= f.label :last_name %><b />
+    <%= f.text_field :last_name, autofocus: true, placeholder:"Last Name", class:"h4 text-ribbon-input text-ribbon-primary" %>
   </div>
 
     <div class="field">
-    <%= f.label :fname %><br />
-    <%= f.text_field :fname, autofocus: true, placeholder:"First Name", class:"h4 text-ribbon-input text-ribbon-primary" %>
+    <%= f.label :first_name %><br />
+    <%= f.text_field :first_name, autofocus: true, placeholder:"First Name", class:"h4 text-ribbon-input text-ribbon-primary" %>
   </div>
 
   <div class="field">
@@ -55,5 +55,3 @@
       </div>
 
 <% end %>
-
-
